# eeg-state

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: config.yaml
configs/data/: default.yaml  full.yaml  greek_all_balanced.yaml  greek_all_balanced_nooverlap.yaml  greek_all_balanced_overlap.yaml  greek_filt.yaml  greek_filt_overlap.yaml  greek_resting.yaml  meditation_bids.yaml  meditation_optimized.yaml  optimized.yaml  optimized_ad.yaml  optimized_all.yaml  runpod.yaml
configs/experiment/: integration_test.yaml
configs/model/: base.yaml  complex.yaml  transformer.yaml  transformer_ff384.yaml  transformer_v2.yaml  transformer_v3.yaml
configs/training/: default.yaml  enhanced.yaml  optimized.yaml  optimized_phase2.yaml
docs/: MEDITATION_TRAINING.md  RUNPOD_TRAINING.md
reports/: state_space_dynamics_progress.md
scripts/: check_gpu.py  generate_eeg.py  plot_recurrence_matrices.py  reve_tutorial_eegmat.py  run_full_pipeline.sh  runpod_setup.sh  visualize_recurrence.py
scripts/local_analysis/: README.md  classify_rqa.py  compare_hc_mci.py  config.py  full_dataset_analysis.py  load_data.py  load_model.py  load_reve_model.py  mci_subtype_analysis.py  multi_embedding.py  plot_recurrence.py  plot_trajectory.py  plot_umap_3d.py  reve_analysis.py  simulation_analysis.py
src/eeg_biomarkers/: __init__.py
src/eeg_biomarkers/analysis/: __init__.py  artifact_control.py  classification.py  rqa.py  state_discovery.py
src/eeg_biomarkers/data/: __init__.py  dataset.py  dataset_config.py  preprocessing.py
src/eeg_biomarkers/experiments/: __init__.py  integration_experiment.py
src/eeg_biomarkers/models/: __init__.py  autoencoder.py  decoder.py  encoder.py  transformer_autoencoder.py  transformer_decoder.py  transformer_encoder.py
src/eeg_biomarkers/training/: __init__.py  enhanced_trainer.py  train.py  trainer.py
src/eeg_biomarkers/utils/: __init__.py  device.py  visualization.py
tests/: __init__.py  test_artifact_control.py  test_dataset_config.py  test_gate_checks.py  test_integration_experiment.py  test_models.py  test_preprocessing.py  test_rqa.py
wandb/: latest-run  latest-run 2  latest-run 3
wandb/run-20260121_232540-0lckm71e/: run-0lckm71e.wandb
wandb/run-20260121_232540-0lckm71e/files/: config.yaml  wandb-metadata.json
wandb/run-20260121_232810-70dnuo6v/: run-70dnuo6v.wandb
wandb/run-20260121_232810-70dnuo6v/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260121_233025-0z66txph/: run-0z66txph.wandb
wandb/run-20260121_233025-0z66txph/files/: diff.patch  diff_d88297a6ca51b41f90db715829fde9d37a0fc6f5.patch  wandb-metadata.json
wandb/run-20260122_001214-on5i48su/: run-on5i48su.wandb
wandb/run-20260122_001214-on5i48su/files/: config.yaml  diff.patch  diff_d88297a6ca51b41f90db715829fde9d37a0fc6f5.patch  requirements.txt  (+2 more)
wandb/run-20260122_073809-vimqytnr/: run-vimqytnr.wandb
(+5 files in other folders)
